base/src/test/resources/failure/syntax/issue293-emoji64.aya.txt
In file $FILE:10:28 ->

   8 |   | ЁЯАО
   9 | 
  10 | def u : тЭдя╕ПхоИтЭдя╕ПцКдтЭдя╕ПцЬАтЭдя╕Пхе╜тЭдя╕ПчЪДтЭдя╕П => ЁЯАО
                                   ^^

Error: Expected type: тЭдя╕ПхоИтЭдя╕ПцКдтЭдя╕ПцЬАтЭдя╕Пхе╜тЭдя╕ПчЪДтЭдя╕П
       Normalized: тЭдя╕ПхоИтЭдя╕ПцКдтЭдя╕ПцЬАтЭдя╕Пхе╜тЭдя╕ПчЪДтЭдя╕П
       Actual type: тЭдя╕П
       Normalized: тЭдя╕П
       They don't match, sorry
What are you doing?
